test/Runner/errors/tests/Seed/Seeding1.runtime.js
seed("Seed", () => {
	throw new Error();
});